[tool.poetry]
name = "drive_and_log"
version = "0.1.0"
description = ""
authors = ["jerry73204 <jerry73204@gmail.com>"]
packages = [
    { include = "agents" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
carla = "^0.9.14"
numpy = "^1.23.3"
pygame = "^2.1.2"
opencv-python = "^4.6.0.66"
matplotlib = "^3.6.2"
shapely = "^1.8.5.post1"
networkx = "^2.8.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
main = "drive_and_log:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
