[tool.poetry]
name = "follow_a_car"
version = "0.1.0"
description = ""
authors = ["jerry73204 <jerry73204@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
carla = "^0.9.14"
numpy = "^1.23.3"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
main = "follow_a_car:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
